# display-top10-models-ranking

./: README.md  config.yml  pyproject.toml  requirements.txt
src/: app_types.py  main.py  orchestrator.py  utils.py
src/data/: top_10_models.json
src/providers/: base.py  bedrock_provider.py  gemini_provider.py  jumpstart_provider.py  openai_provider.py  together_provider.py
